--- a/solution/2022-05-20-CT-12.md
+++ b/solution/2022-05-20-CT-12.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "프로그래머스 - Lv 2 124 나라의 숫자"
+categories: 
+    - programmers
+tag: [Python, coding_test, lv_2]
+toc : true
+toc_sticky: true
+author_profile : false
+sidebar_main: true
+---
+
 문제
 -----
 
