--- a/solution/2022-05-26-CT-22.md
+++ b/solution/2022-05-26-CT-22.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "백준 - [실버 IV] 10816번. 숫자 카드 2"
+categories: 
+    - boj
+tag: [Python, coding_test, 실버_IV]
+toc : true
+toc_sticky: true
+author_profile : false
+sidebar_main: true
+---
+
 문제
 -----
 
