--- a/solution/2022-06-02-CT-25.md
+++ b/solution/2022-06-02-CT-25.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "프로그래머스 - Lv 1 폰켓몬"
+categories: 
+    - programmers
+tag: [Python, coding_test, lv_1]
+toc : true
+toc_sticky: true
+author_profile : false
+sidebar_main: true
+---
+
 문제
 -----
 
