--- a/solution/2022-06-03-CT-29.md
+++ b/solution/2022-06-03-CT-29.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "백준 - [실버 III] 1654번. 랜선 자르기"
+categories: 
+    - boj
+tag: [Python, coding_test, 실버_III]
+toc : true
+toc_sticky: true
+author_profile : false
+sidebar_main: true
+---
+
 문제
 -----
 
