--- a/solution/2022-06-03-CT-31.md
+++ b/solution/2022-06-03-CT-31.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "백준 - [실버 IV] 1620번. 나는야 포켓몬 마스터 이다솜"
+categories: 
+    - boj
+tag: [Python, coding_test, 실버_IV]
+toc : true
+toc_sticky: true
+author_profile : false
+sidebar_main: true
+---
+
 문제
 -----
 
