--- a/solution/2022-05-24-CT-19.md
+++ b/solution/2022-05-24-CT-19.md
@@ -1,14 +1,4 @@
----
-layout: single
-title:  "프로그래머스 - Lv 2 타겟 넘버"
-categories: 
-    - programmers
-tag: [Python, coding_test, lv_2]
-toc : true
-toc_sticky: true
-author_profile : false
-sidebar_main: true
----
+# 프로그래머스 - Lv 2 타겟 넘버
 
 문제
 -----
