--- a/solution/2022-05-24-CT-15.md
+++ b/solution/2022-05-24-CT-15.md
@@ -1,14 +1,4 @@
----
-layout: single
-title:  "프로그래머스 - Lv 1 크레인 인형 뽑기"
-categories: 
-    - programmers
-tag: [Python, coding_test, lv_1]
-toc : true
-toc_sticky: true
-author_profile : false
-sidebar_main: true
----
+# 프로그래머스 - Lv 1 크레인 인형 뽑기
 
 문제
 -----
