--- a/solution/2022-06-04-CT-35.md
+++ b/solution/2022-06-04-CT-35.md
@@ -1,14 +1,4 @@
----
-layout: single
-title:  "백준 - [실버 III] 2512번. 예산"
-categories: 
-    - boj
-tag: [Python, coding_test, 실버_III]
-toc : true
-toc_sticky: true
-author_profile : false
-sidebar_main: true
----
+# 백준 - [실버 III] 2512번. 예산
 
 문제
 -----
