--- a/solution/2022-05-20-CT-08.md
+++ b/solution/2022-05-20-CT-08.md
@@ -17,7 +17,7 @@
 
 예를 들어,
 
-![거리두기](../../assets/geori.PNG)
+![거리두기](/image/geori.PNG)
 
 5개의 대기실을 본 죠르디는 각 대기실에서 응시자들이 거리두기를 잘 기키고 있는지 알고 싶어졌습니다. 자리에 앉아있는 응시자들의 정보와 대기실 구조를 대기실별로 담은 2차원 문자열 배열 `places`가 매개변수로 주어집니다. 각 대기실별로 거리두기를 지키고 있으면 1을, 한 명이라도 지키지 않고 있으면 0을 배열에 담아 return 하도록 solution 함수를 완성해 주세요.
 
@@ -49,6 +49,8 @@
 
 ##### 첫 번째 대기실
 
+|||||||
+|---|---|---|---|---|---|
 |No.|0|1|2|3|4|
 |0|P|O|O|O|P|
 |1|O|X|X|O|X|
@@ -60,6 +62,8 @@
 
 ##### 두 번째 대기실
 
+|||||||
+|---|---|---|---|---|---|
 |No.|0|1|2|3|4|
 |0|P|O|O|P|X|
 |1|O|X|P|X|P|
@@ -73,6 +77,8 @@
 
 ##### 세 번째 대기실
 
+|||||||
+|---|---|---|---|---|---|
 |No.|0|1|2|3|4|
 |0|P|X|O|P|X|
 |1|O|X|O|X|P|
@@ -84,6 +90,8 @@
 
 ##### 네 번째 대기실
 
+|||||||
+|---|---|---|---|---|---|
 |No.|0|1|2|3|4|
 |0|O|O|O|X|X|
 |1|X|O|O|O|X|
@@ -95,6 +103,8 @@
 
 ##### 다섯 번째 대기실
 
+|||||||
+|---|---|---|---|---|---|
 |No.|0|1|2|3|4|
 |0|P|X|P|X|P|
 |1|X|P|X|P|X|
