--- a/solution/2022-05-24-CT-16.md
+++ b/solution/2022-05-24-CT-16.md
@@ -24,7 +24,7 @@
 
 가로가 8, 세로가 12인 직사각형을 대각선 방향으로 자르면 총 16개 정사각형을 사용할 수 없게 됩니다. 원래 직사각형에서는 96개의 정사각형을 만들 수 있었으므로, 96 - 16 = 80 을 반환합니다.
 
-![사각형](../../assets/square.png)
+![사각형](/image/square.png)
 
 설명
 ------
