--- a/solution/2022-06-04-CT-34.md
+++ b/solution/2022-06-04-CT-34.md
@@ -11,11 +11,11 @@ rows x columns 크기인 행렬이 있습니다. 행렬에는 1부터 rows x col
 
 다음은 6 x 6 크기 행렬의 예시입니다.
 
-![행렬1](../../assets/rowand1.png)
+![행렬1](/image/rowand1.png)
 
 이 행렬에 (2, 2, 5, 4) 회전을 적용하면, 아래 그림과 같이 2행 2열부터 5행 4열까지 영역의 테두리가 시계방향으로 회전합니다. 이때, 중앙의 15와 21이 있는 영역은 회전하지 않는 것을 주의하세요.
 
-![행렬2](../../assets/rowand2.png)
+![행렬2](/image/rowand2.png)
 
 행렬의 세로 길이(행 개수) rows, 가로 길이(열 개수) columns, 그리고 회전들의 목록 queries가 주어질 때, 각 회전들을 배열에 적용한 뒤, 그 회전에 의해 위치가 바뀐 숫자들 중 <u>가장 작은 숫자들을 순서대로 배열에 담아</u> return 하도록 solution 함수를 완성해주세요.
 
@@ -45,12 +45,12 @@ rows x columns 크기인 행렬이 있습니다. 행렬에는 1부터 rows x col
 #### 입출력 예 #1
 
 - 회전을 수행하는 과정을 그림으로 표현하면 다음과 같습니다.
-- ![행렬3](../../assets/rowand3.png)
+- ![행렬3](/image/rowand3.png)
 
 #### 입출력 예 #2
 
 - 회전을 수행하는 과정을 그림으로 표현하면 다음과 같습니다.
-- ![행렬4](../../assets/rowand4.png)
+- ![행렬4](/image/rowand4.png)
 
 #### 입출력 예 #3
 
