--- a/solution/2022-06-08-CT-38.md
+++ b/solution/2022-06-08-CT-38.md
@@ -12,7 +12,7 @@
 3. "지도 1"과 "지도 2"는 각각 정수 배열로 암호화되어 있다.
 4. 암호화된 배열은 지도의 각 가로줄에서 벽 부분을 `1`, 공백 부분을 `0`으로 부호화했을 때 얻어지는 이진수에 해당하는 값의 배열이다.
 
-![지도](../../assets/map.PNG)
+![지도](/image/map.PNG)
 
 네오가 프로도의 비상금을 손에 넣을 수 있도록, 비밀지도의 암호를 해독하는 작업을 도와줄 프로그램을 작성하라.
 
