--- a/solution/2022-06-14-CT-46.md
+++ b/solution/2022-06-14-CT-46.md
@@ -30,7 +30,7 @@
   4-5. 생성된 문자열을 반환합니다.
 ```
 
-**"균형잡힌 괄호 문자열"** p가 매개변수로 주어질 때, 주어진 알고리즘을 수행해 **"올바른 괄호 문자열"**로 변환한 결과를 return 하도록 solution 함수를 완성해 주세요.
+`"균형잡힌 괄호 문자열"` p가 매개변수로 주어질 때, 주어진 알고리즘을 수행해 `"올바른 괄호 문자열"`로 변환한 결과를 return 하도록 solution 함수를 완성해 주세요.
 
 ### 매개변수 설명
 
